2009-04-01  Stefan Jahn  <stefan@lkcc.org>

	* rlcg.cpp: Added new transmission line defined by RLCG loads.

2009-03-20  Stefan Jahn  <stefan@lkcc.org>

	* relais.cpp: Fixed on resistance value.  Same bug as in the time
	switch previously.

2009-03-15  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msrstub.cpp: New component: microstrip radial stub.

2008-11-08  Stefan Jahn  <stefan@lkcc.org>

	* digital/buffer.cpp: Added new digital buffer component.

2008-11-02  Stefan Jahn  <stefan@lkcc.org>

	* tswitch.cpp: Fixed severe bug in time switch.  Thanks to Arne
	Woerner for reporting it!

2008-10-27  Stefan Jahn  <stefan@lkcc.org>

	* devices/jfet.cpp (cirdef): Adjusted property range for 'Vt0tc'
	and 'Betatce' parameters to have no limitations.

2008-10-11  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp (cirdef): Added 'Material' parameter.

2008-10-09  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp: Applied temperature dependent waveguide model
	provided by Andrea Zonca.  Thanks a lot.

2008-07-17  Stefan Jahn  <stefan@lkcc.org>

	* vprobe.cpp: Fixed bug in the S-parameters of this component.

2008-06-26  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp: Added new rectangular waveguide component provided
	by Bastien.

2008-06-25  Stefan Jahn  <stefan@lkcc.org>

	* amplifier.cpp: Implemented noise figure 'NF' property.

2008-03-31  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp, devices/diac.cpp:
	Improved convergence during transient simulation. Thanks to
	Michael.

2008-02-22  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Implemented T-parameters.

2008-02-21  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Implemented H-, G- and A- parameters.

2008-02-20  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Using extended MNA entries for AC analysis when
	specifying S- or Z-parameters.  Allowing zero-frequency evaluation
	for DC analysis.

2008-02-18  Stefan Jahn  <stefan@lkcc.org>
